# dspy-rag-fastapi

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  main.py  pyproject.toml
app/api/routers/: chat.py  rag.py
app/utils/: load.py  rag_modules.py
backend/: pyproject.toml
backend/app/api/routers/: rag.py
backend/app/utils/: load.py  models.py  rag_functions.py  rag_modules.py
data/checkpoints/: compiled_rag.json
data/chroma_db/: chroma.sqlite3
frontend/pages/: 1_zero_shot_query.py  2_compiled_query.py  3_optimize_pipeline.py
