[tool.poetry]
name = "dspy-rag-fastapi"
version = "0.1.0"
description = "FastAPI wrapper around DSPy"
authors = ["diicell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
dspy-ai = {extras = ["chromadb"], version = "^2.3.4"}
ollama = "^0.1.6"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
