[tool.poetry]
name = "dspy-rag-fastapi"
version = "0.1.0"
description = "FastAPI wrapper around dspy"
authors = ["diicell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ollama = "^0.1.6"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
chromadb = "^0.4.24"
dspy-ai = "^2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
